<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity"
    tools:showIn="@layout/activity_home">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/courses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </LinearLayout>

    <Button
        android:id="@+id/courses"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="467dp"
        android:onClick="courses"
        android:text="@string/courses_h"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting" />

    <Button
        android:id="@+id/availability"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="3dp"
        android:onClick="courses"
        android:text="@string/availabilities_h"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/requests"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courses" />

    <Button
        android:id="@+id/requests"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:layout_marginBottom="314dp"
        android:onClick="courses"
        android:text="@string/requests_h"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/availability"
        app:layout_constraintStart_toStartOf="@+id/availability"
        app:layout_constraintTop_toBottomOf="@+id/availability" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:text=""
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/courses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>